--- a/index.html
+++ b/index.html
@@ -22,12 +22,27 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Add New Task</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                ...
-              </div>
+                <div class="mb-3">
+                  <label for="imageurl" class="form-label">Image URL</label>
+                  <input type="url" class="form-control" id="imageurl" aria-describedby="Image URL" placeholder="https://example.com/hello.jpg"/> 
+                </div>
+                <div class="mb-3">
+                  <label for="tasktitle" class="form-label">Task title</label>
+                  <input type="text" class="form-control" id="tasktitle" aria-describedby="Task title" placeholder="eg. API integration"/> 
+                </div>
+                <div class="mb-3">
+                  <label for="tasktype" class="form-label">Task type</label>
+                  <input type="text" class="form-control" id="tasktype" aria-describedby="Task type" placeholder="eg. work"/> 
+                </div>
+                <div class="mb-3">
+                  <label for="taskdescription" class="form-label">Task description</label>
+                  <textarea rows="6" class="form-control" id="taskdescription" aria-describedby="Task description" placeholder="Describe your work in detail"></textarea>
+                </div>  
+              </div> 
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary">Save changes</button>
@@ -38,7 +53,7 @@
       <!--navbar-->
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand fw-bold text-primary" href="#">Tasky</a>
+              <a class="navbar-brand fw-bold text-primary" href="#">TaskY</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
