--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </div> 
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-primary" onclick="saveChanges()">Save changes</button>
               </div>
             </div>
           </div>
@@ -78,9 +78,9 @@
               </div> 
               <!--card-->
               <section>
-                 <div class="row">
+                 <div class="row task__container" >
                      <div class="col-md-6 col-lg-4">
-                        <div class="card text-center">
+                        <div class="card">
                             <div class="card-header d-flex justify-content-end gap-2">
                                 <button type="button" class="btn btn-outline-success"><i class="fas fa-pencil-alt"></i></button>
                                 <button type="button" class="btn btn-outline-danger"><i class="fas fa-trash"></i></button>
