--- a/index.html
+++ b/index.html
@@ -4,104 +4,186 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <!--font awesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!--Our css--> 
-    <link href="style.css" rel="stylesheet"/>
-    <title>Tasky</title> 
-    </head>
-    <body>
-      <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Add New Task</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <div class="mb-3">
-                  <label for="imageurl" class="form-label">Image URL</label>
-                  <input type="url" class="form-control" id="imageurl" aria-describedby="Image URL" placeholder="https://example.com/hello.jpg"/> 
-                </div>
-                <div class="mb-3">
-                  <label for="tasktitle" class="form-label">Task title</label>
-                  <input type="text" class="form-control" id="tasktitle" aria-describedby="Task title" placeholder="eg. API integration"/> 
-                </div>
-                <div class="mb-3">
-                  <label for="tasktype" class="form-label">Task type</label>
-                  <input type="text" class="form-control" id="tasktype" aria-describedby="Task type" placeholder="eg. work"/> 
-                </div>
-                <div class="mb-3">
-                  <label for="taskdescription" class="form-label">Task description</label>
-                  <textarea rows="6" class="form-control" id="taskdescription" aria-describedby="Task description" placeholder="Describe your work in detail"></textarea>
-                </div>  
-              </div> 
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" onclick="saveChanges()">Save changes</button>
-              </div>
+
+    <!-- Font -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
+      rel="stylesheet"
+    />
+
+    <!-- FontAwesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+
+    <!-- Our CSS -->
+    <link rel="stylesheet" href="style.css" />
+
+    <title>Tasky</title>
+  </head>
+  <body onload="loadInitialCardData()" >
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Add New Task</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-3">
+              <label for="imageurl" class="form-label">Image Url</label>
+              <input
+                type="url"
+                class="form-control"
+                id="imageurl"
+                aria-describedby="Image url"
+                placeholder="https://example.com/hello.jpg"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="tasktitle" class="form-label">Task Title</label>
+              <input
+                type="text"
+                class="form-control"
+                id="tasktitle"
+                aria-describedby="Task title"
+                placeholder="eg: API Integration"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="tasktype" class="form-label">Task Type</label>
+              <input
+                type="text"
+                class="form-control"
+                id="tasktype"
+                aria-describedby="Task type"
+                placeholder="eg: work"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="taskdescription" class="form-label"
+                >Task Description</label
+              >
+              <textarea
+                rows="6"
+                class="form-control"
+                id="taskdescription"
+                aria-describedby="Task type"
+                placeholder="Describe your task in detail"
+              ></textarea>
             </div>
           </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="saveChanges()"
+              data-bs-dismiss="modal"
+            >
+              Save changes
+            </button>
+          </div>
         </div>
-      <!--navbar-->
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand fw-bold text-primary" href="#">TaskY</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                </ul>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fas fa-plus"></i> Add New</button>
-              </div>
-            </div>
-          </nav>
-          <div class="container">
-              <div class="row justify-content-center mt-5">
-                  <div class="col-md-6">
-                    <div class="input-group mb-3 shadow">
-                        <input type="text" class="form-control" placeholder="Search task" aria-label="Search task" aria-describedby="basic-addon2">
-                        <span class="input-group-text" id="basic-addon2"><i class="fas fa-search"></i></span>
-                    </div>
-                  </div>
-              </div> 
-              <!--card-->
-              <section>
-                 <div class="row task__container" >
-                     <div class="col-md-6 col-lg-4">
-                        <div class="card">
-                            <div class="card-header d-flex justify-content-end gap-2">
-                                <button type="button" class="btn btn-outline-success"><i class="fas fa-pencil-alt"></i></button>
-                                <button type="button" class="btn btn-outline-danger"><i class="fas fa-trash"></i></button>
-                            </div>
+      </div>
+    </div>
 
-                            <img src="https://media.istockphoto.com/photos/pakistan-monument-islamabad-picture-id535695503?k=6&m=535695503&s=612x612&w=0&h=uP8aDK4xlfjk3kEiyr9wwUiuh80UwAiICweFpiBDosk=" class="card-img-top" alt=".."/>
-                            <div class="card-body">
-                              <h5 class="card-title">Special title treatment</h5>
-                              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                            <div class="card-footer">
-                                <button type="button" class="btn btn-outline-primary float-end">Open task</button>
-                            </div>
-                          </div>
-                     </div> 
-                 </div> 
-              </section>     
-         </div> 
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand fw-bold text-primary" href="#">Tasky</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+          </ul>
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+          >
+            <i class="fas fa-plus"></i> Add New
+          </button>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container">
+      <div class="row justify-content-center mt-5">
+        <div class="col-md-6">
+          <div class="input-group mb-3 shadow">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Search task"
+              aria-label="Search task"
+              aria-describedby="basic-addon2"
+            />
+            <span class="input-group-text" id="basic-addon2"
+              ><i class="fas fa-search"></i
+            ></span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Cards -->
+      <section>
+        <div class="row task__container">
+        </div>
+      </section>
+    </div>
+
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>   
-   <script src="index.js"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Our JavaScript File -->
+    <script src="index.js"></script>
+  </body>
 </html>
