--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
 
-    <!-- FontAwesome -->
+    <!-- Fontawesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -33,7 +34,7 @@
 
     <title>Tasky</title>
   </head>
-  <body onload="loadInitialCardData()" >
+  <body onload="loadInitialTaskCards()">
     <!-- Modal -->
     <div
       class="modal fade"
@@ -60,8 +61,7 @@
                 type="url"
                 class="form-control"
                 id="imageurl"
-                aria-describedby="Image url"
-                placeholder="https://example.com/hello.jpg"
+                placeholder="https://images.hello.com/hello.jpg"
               />
             </div>
             <div class="mb-3">
@@ -70,8 +70,7 @@
                 type="text"
                 class="form-control"
                 id="tasktitle"
-                aria-describedby="Task title"
-                placeholder="eg: API Integration"
+                placeholder="API Integration"
               />
             </div>
             <div class="mb-3">
@@ -80,8 +79,7 @@
                 type="text"
                 class="form-control"
                 id="tasktype"
-                aria-describedby="Task type"
-                placeholder="eg: work"
+                placeholder="development"
               />
             </div>
             <div class="mb-3">
@@ -92,8 +90,7 @@
                 rows="6"
                 class="form-control"
                 id="taskdescription"
-                aria-describedby="Task type"
-                placeholder="Describe your task in detail"
+                placeholder="Building an amazing API!"
               ></textarea>
             </div>
           </div>
@@ -108,8 +105,8 @@
             <button
               type="button"
               class="btn btn-primary"
-              onclick="saveChanges()"
               data-bs-dismiss="modal"
+              onclick="saveChanges()"
             >
               Save changes
             </button>
@@ -119,9 +116,11 @@
     </div>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-light bg-light shadow-sm">
       <div class="container-fluid">
-        <a class="navbar-brand fw-bold text-primary" href="#">Tasky</a>
+        <h1 class="navbar-brand fw-bold">
+          <a href="#" contenteditable="true">Tasky</a>
+        </h1>
         <button
           class="navbar-toggler"
           type="button"
@@ -150,32 +149,31 @@
         </div>
       </div>
     </nav>
-
     <div class="container">
-      <div class="row justify-content-center mt-5">
-        <div class="col-md-6">
-          <div class="input-group mb-3 shadow">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Search task"
-              aria-label="Search task"
-              aria-describedby="basic-addon2"
-            />
-            <span class="input-group-text" id="basic-addon2"
-              ><i class="fas fa-search"></i
-            ></span>
+      <!-- Search bar -->
+      <section class="mt-5">
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <div class="input-group mb-3 shadow">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Search Task"
+                aria-label="Search Task"
+                aria-describedby="basic-addon2"
+              />
+              <span class="input-group-text" id="basic-addon2"
+                ><i class="fas fa-search"></i
+              ></span>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
 
-      <!-- Cards -->
       <section>
-        <div class="row task__container">
-        </div>
+        <div class="row task__container"></div>
       </section>
     </div>
-
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -183,7 +181,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- Our JavaScript File -->
+    <!-- Our Js file -->
     <script src="index.js"></script>
   </body>
 </html>
