--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light shadow-sm">
       <div class="container-fluid">
         <h1 class="navbar-brand fw-bold">
-          <a href="#" contenteditable="true">Tasky</a>
+          <a href="#" contenteditable="false">Tasky</a>
         </h1>
         <button
           class="navbar-toggler"
